-server
-Xmx3G
-XX:+UseG1GC
-XX:+UseGCOverheadLimit
-XX:+ExplicitGCInvokesConcurrent
-XX:+HeapDumpOnOutOfMemoryError
-XX:+ExitOnOutOfMemoryError
-XX:ReservedCodeCacheSize=150M
-DHADOOP_USER_NAME=hive
-Duser.timezone=UTC
-Djdk.attach.allowAttachSelf=true
-Djdk.nio.maxCachedBufferSize=2000000 
-Dpresto-temporarily-allow-java8=true
-Djava.security.krb5.conf=/home/dhanuka/research/hdfs/docker-hadoop-secure/config_files/krb5.conf
-Dsun.security.krb5.debug=true
-Dlog.enable-console=true
